updated everything to time series and derived datasets there of

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -61,7 +61,7 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-10-01'\n",
+    "sdate = '2022-09-01'\n",
     "edate = '2022-10-31'"
    ]
   },
@@ -92,7 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown(sdate, edate)\n",
+    "df = qlib.total_cost_breakdown(sdate, edate).round(2)\n",
     "df.loc[len(df.index)] = ['Total', df['credits'].sum(), df['dollars'].sum()]\n",
     "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))\n"
    ]
@@ -206,12 +206,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown_ts(sdate, edate)"
+    "## Breakdown of total cost as a time series"
    ]
   },
   {
@@ -220,6 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = qlib.cost_of_searchoptimization_ts(sdate,edate)\n",
     "df"
    ]
   },
