minor changes in docs for queries.py

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -312,10 +312,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdate = '2022-10-01'\n",
-    "df = qlib.cost_by_user_ts(sdate, edate)\n",
+    "sdate = '2020-01-01'\n",
+    "df = qlib.cost_of_autoclustering_ts(sdate, edate)\n",
     "df.head(30)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
