--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initialization"
+    "## Initialization (Done)"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "# Initialize query library\n",
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
-    "sdate = '2022-08-01'\n",
+    "sdate = '2022-10-01'\n",
     "edate = '2022-10-31'"
    ]
   },
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Total cost breakdown"
+    "# Total cost breakdown "
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Breakdown of total cost by usage type"
+    "## Breakdown of total cost by usage type (Done)"
    ]
   },
   {
@@ -152,6 +152,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Breakdown of total cost as a time series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.total_cost_breakdown_ts(sdate, edate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_user = df.groupby(['user_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_user, x=\"start_time\", y=\"credits\", color=\"user_name\")#, line_group=\"country\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.cost_of_storage_ts()\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_category = df.groupby(['category_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_category, x=\"start_time\", y=\"credits\", color=\"category_name\")#, line_group=\"country\")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Breakdown of total cost by warehouse"
    ]
   },
@@ -187,7 +244,7 @@
     "        'y':0.1,\n",
     "        'x':0.5,\n",
     "        'xanchor': 'center',\n",
-    "        'yanchor': 'bottom'})\n",
+    "        'yanchor': 'top'})\n",
     "fig.show()"
    ]
   },
@@ -213,7 +270,8 @@
    "outputs": [],
    "source": [
     "df = qlib.cost_by_partner_tool_ts(sdate, edate).round(2)\n",
-    "df.loc[len(df.index)] = ['All Apps', 'ALL WHs' ,df['approximate_credits_used'].sum()]\n",
+    "df = df.drop(len(df)-1).groupby('client_application_name').sum('numeric_only').reset_index()\n",
+    "df.loc[len(df.index)] = ['Total', df['approximate_credits_used'].sum()]\n",
     "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
@@ -223,16 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_client_app = df.drop(len(df)-1).groupby('client_application_name').sum('numric_only').reset_index()\n",
-    "print(tabulate(df_client_app, headers='keys', tablefmt='rounded_outline', showindex=False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = df.drop(len(df)-1) ## Remove the last row of totals for the plot\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=1,\n",
     "    specs=[[{\"type\": \"pie\"}]],\n",
@@ -262,37 +311,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = qlib.cost_by_user_ts(sdate, edate)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Breakdown of total cost as a time series"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qlib.cost_of_cloud_services_ts(sdate, edate)\n",
-    "df.head()\n"
+    "## Warehouse configuration"
    ]
   },
   {
@@ -301,9 +329,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdate = '2022-10-01'\n",
-    "df = qlib.cost_by_wh_ts(sdate, edate)\n",
-    "df.head()"
+    "df = qlib.warehouse_config()\n",
+    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
   {
@@ -312,9 +339,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sdate = '2020-01-01'\n",
-    "df = qlib.cost_of_autoclustering_ts(sdate, edate)\n",
-    "df.head(30)"
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "- auto suspend times here vary from 60 min to 3600 min - these seem very large assuming auto resuming does not take very long\n",
+    "- There are no resource monitors being used - this should be corrected"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cost of queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.n_expensive_queries(sdate, edate, 10)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['query_text'][0] == df['query_text'][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['query_text'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['query_text'][1]"
    ]
   },
   {
