--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -179,9 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_user = df.groupby(['user_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_user, x=\"start_time\", y=\"credits\", color=\"user_name\")#, line_group=\"country\")\n",
-    "fig.show()"
+    "df[df['category_name'] == 'Storage']"
    ]
   },
   {
@@ -190,8 +188,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.cost_of_storage_ts()\n",
-    "df.head()"
+    "df_by_user = df.groupby(['user_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
+    "df_by_user.head()"
    ]
   },
   {
