pulling from master

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -407,6 +407,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df = qlib.cost_by_wh_ts()\n",
+    "df.warehouse_name.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
