--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "df_by_category = df.groupby(['category_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category, x=\"start_time\", y=\"credits\", color=\"category_name\")#, line_group=\"country\")\n",
+    "fig = px.area(df_by_category, x=\"start_time\", y=\"credits\", color=\"category_name\", color_discrete_sequence=[\"red\",\"blue\",\"green\"])#, line_group=\"country\")\n",
     "fig.show()"
    ]
   },
