added list of colors

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -23,7 +23,7 @@
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from tabulate import tabulate"
+    "from tabulate import tabulate\n"
    ]
   },
   {
@@ -62,7 +62,8 @@
     "from optiml.queries import SNFLKQuery\n",
     "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
     "sdate = '2022-10-01'\n",
-    "edate = '2022-10-31'"
+    "edate = '2022-10-31'\n",
+    "color_scheme=[\"red\",\"blue\",\"green\",\"orange\",\"purple\",\"brown\",\"pink\",\"gray\",\"olive\",\"cyan\",\"darkviolet\",\"goldenrod\",\"darkgreen\",\"chocolate\",\"lawngreen\"]"
    ]
   },
   {
@@ -199,7 +200,7 @@
    "outputs": [],
    "source": [
     "df_by_category = df.groupby(['category_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category, x=\"start_time\", y=\"credits\", color=\"category_name\", color_discrete_sequence=[\"red\",\"blue\",\"green\"])#, line_group=\"country\")\n",
+    "fig = px.area(df_by_category, x=\"start_time\", y=\"credits\", color=\"category_name\",color_discrete_sequence=color_scheme )#, line_group=\"country\")\n",
     "fig.show()"
    ]
   },
