more functions added

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,18 +41,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -1032,6 +1023,254 @@
     "df=qlib.users_never_logged_in(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>created_on</th>\n",
+       "      <th>deleted_on</th>\n",
+       "      <th>name</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>owner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-11-14 09:28:09.112000-08:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>KIV_ADMIN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>ACCOUNTADMIN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-09-26 13:24:02.852000-07:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>USERADMIN</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-09-26 13:24:02.772000-07:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>PUBLIC</td>\n",
+       "      <td>Public role is automatically available to ever...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-09-26 13:24:02.839000-07:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>SYSADMIN</td>\n",
+       "      <td>System administrator can create and manage dat...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-09-26 13:24:02.795000-07:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>ACCOUNTADMIN</td>\n",
+       "      <td>Account administrator can manage all aspects o...</td>\n",
+       "      <td>&lt;NA&gt;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        created_on deleted_on          name  \\\n",
+       "0 2022-11-14 09:28:09.112000-08:00        NaT     KIV_ADMIN   \n",
+       "1 2022-09-26 13:24:02.852000-07:00        NaT     USERADMIN   \n",
+       "2 2022-09-26 13:24:02.772000-07:00        NaT        PUBLIC   \n",
+       "3 2022-09-26 13:24:02.839000-07:00        NaT      SYSADMIN   \n",
+       "4 2022-09-26 13:24:02.795000-07:00        NaT  ACCOUNTADMIN   \n",
+       "\n",
+       "                                             comment         owner  \n",
+       "0                                               <NA>  ACCOUNTADMIN  \n",
+       "1                                               <NA>          <NA>  \n",
+       "2  Public role is automatically available to ever...          <NA>  \n",
+       "3  System administrator can create and manage dat...          <NA>  \n",
+       "4  Account administrator can manage all aspects o...          <NA>  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=qlib.idle_roles(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>query_text</th>\n",
+       "      <th>condition_text</th>\n",
+       "      <th>schema_name</th>\n",
+       "      <th>task_schema_id</th>\n",
+       "      <th>database_name</th>\n",
+       "      <th>task_database_id</th>\n",
+       "      <th>scheduled_time</th>\n",
+       "      <th>completed_time</th>\n",
+       "      <th>state</th>\n",
+       "      <th>return_value</th>\n",
+       "      <th>query_id</th>\n",
+       "      <th>query_start_time</th>\n",
+       "      <th>error_code</th>\n",
+       "      <th>error_message</th>\n",
+       "      <th>graph_version</th>\n",
+       "      <th>run_id</th>\n",
+       "      <th>root_task_id</th>\n",
+       "      <th>scheduled_from</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, query_text, condition_text, schema_name, task_schema_id, database_name, task_database_id, scheduled_time, completed_time, state, return_value, query_id, query_start_time, error_code, error_message, graph_version, run_id, root_task_id, scheduled_from]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=qlib.failed_tasks(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration_seconds</th>\n",
+       "      <th>name</th>\n",
+       "      <th>query_text</th>\n",
+       "      <th>condition_text</th>\n",
+       "      <th>schema_name</th>\n",
+       "      <th>task_schema_id</th>\n",
+       "      <th>database_name</th>\n",
+       "      <th>task_database_id</th>\n",
+       "      <th>scheduled_time</th>\n",
+       "      <th>completed_time</th>\n",
+       "      <th>state</th>\n",
+       "      <th>return_value</th>\n",
+       "      <th>query_id</th>\n",
+       "      <th>query_start_time</th>\n",
+       "      <th>error_code</th>\n",
+       "      <th>error_message</th>\n",
+       "      <th>graph_version</th>\n",
+       "      <th>run_id</th>\n",
+       "      <th>root_task_id</th>\n",
+       "      <th>scheduled_from</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [duration_seconds, name, query_text, condition_text, schema_name, task_schema_id, database_name, task_database_id, scheduled_time, completed_time, state, return_value, query_id, query_start_time, error_code, error_message, graph_version, run_id, root_task_id, scheduled_from]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df=qlib.long_running_tasks(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
