Analysis notebook pre warehouse analysis

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -107,6 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Remove the last row of totals for the plot\n",
     "df_by_usage_category.reset_index(inplace=True)\n",
     "df_by_usage_category.drop(columns=[\"index\"], inplace=True)\n",
     "df_by_usage_category = df_by_usage_category.drop(len(df_by_usage_category)-1) \n"
@@ -118,7 +119,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Remove the last row of totals for the plot\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
@@ -151,44 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_category = df.groupby(['category_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category, x=\"start_time\", y=\"credits\", color=\"category_name\",color_discrete_sequence=color_scheme )#, line_group=\"country\")\n",
+    "df_by_category_ts = df.groupby(['category_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_category_ts, x=\"start_time\", y=\"credits\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Analysis\n",
-    "- Compute forms overwhelming majority of the cost\n",
-    "- Cloud services are in aggregate < 10 % of compute so are not an added expense\n",
-    "- Autoclustering used to be on in 2020 but isn't anymore\n",
-    "- Should explore if there are any compute efficiencies to be gained by \n",
-    "    - Autoclustering\n",
-    "    - Materialized views / caching\n",
-    "    - Search optimization\n",
-    "    - Query optimizations / reducing scans"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Largely used by compute\n",
-    "* In 2020 auto clustering was on but was turned off - why?\n",
-    "* Storage credits at 0 since storage is charged as a flat rate - are numbers consistent?\n",
-    "* Definitely did not use $80K worth of credits in October since total bill is $50K - so something is wrong!\n"
    ]
   },
   {
@@ -204,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_user = df.groupby(['user_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "df_by_user.head()"
+    "df_by_user = df.groupby(['user_name']).sum('numeric_only').reset_index()\n",
+    "print(tabulate(df_by_user, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
   {
@@ -214,23 +179,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(len(df)-1) ## Remove the last row of totals for the plot\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
     "    subplot_titles=(\"Dollars\", \"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df['cost_category'].tolist(), values=df['dollars'].tolist(),name=\"Dollars\", rotation=45),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df['cost_category'].tolist(), values=df['credits'].tolist(),name='Credits', rotation=45),row=1,col=2)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['dollars'].tolist(),name=\"Dollars\", rotation=45),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),name='Credits', rotation=45),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
-    "        'text': \"Breakdown of total cost by usage category\",\n",
+    "        'text': \"Breakdown of total cost by user\",\n",
     "        'y':0.1,\n",
     "        'x':0.5,\n",
     "        'xanchor': 'center',\n",
     "        'yanchor': 'bottom'})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_user_ts = df.groupby(['user_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_user_ts, x=\"start_time\", y=\"credits\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
   },
@@ -327,23 +302,6 @@
     "        'xanchor': 'center',\n",
     "        'yanchor': 'top'})\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Breakdown of total cost by user (to do)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qlib.cost_by_user_ts(sdate, edate)\n",
-    "df"
    ]
   },
   {
