Added warehouse timeseries function

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -125,8 +125,8 @@
     "    subplot_titles=(\"Dollars\", \"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", rotation=45),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits', rotation=45),row=1,col=2)\n",
+    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['dollars'].tolist(),name=\"Dollars\", rotation=45,marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_usage_category['category_name'].tolist(), values=df_by_usage_category['credits'].tolist(),name='Credits', rotation=45,marker_colors=color_scheme),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -185,8 +185,8 @@
     "    subplot_titles=(\"Dollars\", \"Credits\")\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['dollars'].tolist(),name=\"Dollars\", rotation=45),row=1,col=1)\n",
-    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),name='Credits', rotation=45),row=1,col=2)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['dollars'].tolist(),name=\"Dollars\", rotation=45,marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_user['user_name'].tolist(), values=df_by_user['credits'].tolist(),name='Credits', rotation=45,marker_colors=color_scheme),row=1,col=2)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -241,7 +241,7 @@
     "    specs=[[{\"type\": \"pie\"}]],\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df['warehouse_name'].tolist(), values=df['dollars'].tolist(),name='dollars'),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df['warehouse_name'].tolist(), values=df['dollars'].tolist(),name='dollars',marker_colors=color_scheme),row=1,col=1)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -251,6 +251,17 @@
     "        'xanchor': 'center',\n",
     "        'yanchor': 'top'})\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_warehouse_ts=df.groupby(['warehouse_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_user_ts, x=\"start_time\", y=\"credits\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
+    "fig.show()\n"
    ]
   },
   {
