--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "df_by_warehouse_ts=df.groupby(['warehouse_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_user_ts, x=\"start_time\", y=\"credits\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
+    "fig = px.area(df_by_warehouse_ts, x=\"start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()\n"
    ]
   },
