--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "# Initialize Snowflake connection to Snowflake\n",
     "from optiml.connection import SnowflakeConnConfig\n",
-    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',username='nikhilu',password=\"NikhilU123\",warehousename=\"XSMALL_WH\").create_connection()\n",
+    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
     "# Initialize local environment\n",
     "import os\n",
     "cache_dir = os.path.expanduser('~/data/kiva')\n",
