updated comments in notebook

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -47,6 +47,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ##center allign all the figure outputs.\n",
+    "# from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
+    "# from IPython.display import display, HTML\n",
+    "# from plotly.graph_objs import *\n",
+    "# import numpy as np\n",
+    "# init_notebook_mode(connected=True)\n",
+    "\n",
+    "# display(HTML(\"\"\"\n",
+    "# <style>\n",
+    "# .output {\n",
+    "#     display: flex;\n",
+    "#     align-items: center;\n",
+    "#     text-align: center;\n",
+    "# }\n",
+    "# </style>\n",
+    "# \"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Setting up autoreload for libs\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -95,22 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##center allign all the figure outputs.\n",
-    "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot\n",
-    "from IPython.display import display, HTML\n",
-    "from plotly.graph_objs import *\n",
-    "import numpy as np\n",
-    "init_notebook_mode(connected=True)\n",
-    "\n",
-    "display(HTML(\"\"\"\n",
-    "<style>\n",
-    ".output {\n",
-    "    display: flex;\n",
-    "    align-items: center;\n",
-    "    text-align: center;\n",
-    "}\n",
-    "</style>\n",
-    "\"\"\"))"
+    "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
+    "df = df.fillna('Unassigned')\n",
+    "df.head()"
    ]
   },
   {
@@ -119,10 +130,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown_ts(sdate, edate).round(2)\n",
-    "# df.head()\n",
     "df_by_usage_category = df.groupby(\"category_name\").sum(\"numeric_only\").reset_index()\n",
-    "df_by_usage_category.loc[len(df.index)] = ['Total', df['credits'].sum(), df['dollars'].sum()]\n",
+    "df_by_usage_category.loc[len(df.index)] = ['Total', df_by_usage_category['credits'].sum(), df_by_usage_category['dollars'].sum()]\n",
+    "df_by_usage_category = df_by_usage_category.round(2)\n",
     "print(tabulate(df_by_usage_category, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
@@ -188,6 +198,8 @@
    "outputs": [],
    "source": [
     "df_by_user = df.groupby(['user_name']).sum('numeric_only').reset_index()\n",
+    "df_by_user = df_by_user.round(2)\n",
+    "df_by_user.loc[len(df.index)] = ['Total', df_by_user['credits'].sum(), df_by_user['dollars'].sum()]\n",
     "print(tabulate(df_by_user, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
@@ -240,10 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.cost_by_wh_ts(sdate, edate).round(2)\n",
-    "df.head()\n",
-    "# df.loc[len(df.index)] = ['Total', df['credits'].sum(), df['dollars'].sum()]\n",
-    "# print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
+    "df = qlib.cost_by_wh_ts(sdate, edate)\n",
+    "df.head()"
    ]
   },
   {
@@ -252,14 +262,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(len(df)-1) ## Remove the last row of totals for the plot\n",
+    "df_by_wh = df.groupby(['warehouse_name']).sum('numeric_only').reset_index()\n",
+    "df_by_wh.loc[len(df.index)] = ['Total', df_by_wh['credits'].sum(), df_by_wh['dollars'].sum(), df_by_wh['cloud_services_dollars'].sum()]\n",
+    "df_by_wh.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_wh = df.groupby(['warehouse_name']).sum('numeric_only').reset_index()\n",
+    "df_by_wh.loc[len(df_by_wh.index)] = ['Total', df_by_wh['credits'].sum(), df_by_wh['dollars'].sum(), df_by_wh['cloud_services_dollars'].sum()]\n",
+    "\n",
+    "print(tabulate(df_by_wh, headers='keys', tablefmt='rounded_outline', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_wh = df_by_wh.drop(len(df_by_wh)-1) ## Remove the last row of totals for the plot\n",
     "\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=1,\n",
     "    specs=[[{\"type\": \"pie\"}]],\n",
     ")\n",
     "\n",
-    "fig.add_trace(go.Pie(labels=df['warehouse_name'].tolist(), values=df['dollars'].tolist(),name='dollars',marker_colors=color_scheme),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df_by_wh['warehouse_name'].tolist(), values=df_by_wh['dollars'].tolist(),name='dollars',marker_colors=color_scheme),row=1,col=1)\n",
     "\n",
     "fig.update_layout(\n",
     "    title={\n",
@@ -276,11 +309,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_by_warehouse_ts=df.groupby(['warehouse_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_warehouse_ts, x=\"start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
-    "fig.show()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
