--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -110,18 +110,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SETUP FOR ANALYSIS\n",
-    "- Date range: 10/1/22 to 10/12/22\n",
-    "\n",
-    "- Type of account with Snowflake - Standard Edition powered by GCP\n",
-    "\n",
-    "- Credit to dollar conversion - $2 per credit\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Cost by usage category"
    ]
   },
@@ -182,13 +170,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cost of using compute is 98.8% of total cost and the cost of using cloud services is 1.2% of total cost."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Cost by usage category timeseries"
    ]
   },
@@ -198,61 +179,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_category_ts = df.groupby(['category_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_category_ts, x=\"start_time\", y=\"credits\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
+    "df_by_category_ts = df.groupby(['category_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_category_ts, x=\"hourly_start_time\", y=\"credits\", color=\"category_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### COMPUTE:\n",
-    " Average credits used for the Compute category reach a high at 9 a.m. and then a low at 7 p.m.\n",
-    " >Hourly credit consumption -\n",
-    "- Max: 27.04\t\t\n",
-    "- Time: 9:00 am\n",
-    "- Min: 9.18 \n",
-    "- Time: 7:00 pm"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Credits are consumed throughout the night from 8:00 p.m. to 8:00 a.m.\n",
-    "> Average hourly credit consumption between 8:00 pm - 8:00 am:\n",
-    "- Mean: 9.85\n",
-    "- Standard deviation: 0.48"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "On the 8th, 9th and 10th of October, credits consumed at night increased , while at other times, they remained the same from previous days.\n",
-    "- Mean: 12.66\n",
-    "- Standard deviation: 0.419\n",
-    "- Increase in mean from the previous nights : 2.81"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From October 1 - October 5, there is a peak in credit consumption at 2 pm.\n",
-    "- Average credit consumption: 29.5\n",
-    "- Increase from other days at 2 p.m : 12.8 "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CLOUD SERVICES\n",
-    "- The credits for cloud services follow a similar trend as compute with regards to daily timings.\n",
-    "- Usage of credits of cloud services are only charged if the daily consumption of cloud services resources exceeds 10% of the daily warehouse usage.\n",
-    "\n"
    ]
   },
   {
@@ -280,6 +209,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df_by_user.drop(df_by_user.tail(1).index,inplace=True)\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]],\n",
@@ -300,33 +230,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- User GREGORYW incurs the maximum value of dollars and credits at 2418 and 1209, respectively.\n",
-    "- Users VERTX_PROD and DBT_PROD incur almost the same values of dollars and credit at 1497 and 748, respectively. \n",
-    "- Users DBT_DEV and ROBS spend the least value of dollars and credits compared to other users.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_user_ts = df.groupby(['user_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_user_ts, x=\"start_time\", y=\"credits\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
+    "df_by_user_ts = df.groupby(['user_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
+    "fig = px.area(df_by_user_ts, x=\"hourly_start_time\", y=\"credits\", color=\"user_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- The time series by user follows a similar trend as the time series by usage category graph with regards to usage of credits at daily time slots.\n",
-    "- The increase in credit usage on the 8th, 9th and 10th of October is because of usage increases by GREGORYW and DBT_DEV. The 2 p.m. credit usage spike from October 1- October 5 can also be attributed to those users. \n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -342,8 +253,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Returns results only for ACCOUNTADMIN role or any other role that has been granted MONITOR USAGE global privilege\n",
+    "# So results consisten with Greg's usage\n",
     "df = qlib.cost_by_wh_ts(sdate, edate)\n",
-    "df.head()"
+    "# df.head()"
    ]
   },
   {
@@ -353,19 +266,8 @@
    "outputs": [],
    "source": [
     "df_by_wh = df.groupby(['warehouse_name']).sum('numeric_only').reset_index()\n",
-    "df_by_wh.loc[len(df.index)] = ['Total', df_by_wh['credits'].sum(), df_by_wh['dollars'].sum(), df_by_wh['cloud_services_dollars'].sum()]\n",
-    "df_by_wh.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_by_wh = df.groupby(['warehouse_name']).sum('numeric_only').reset_index()\n",
-    "df_by_wh.loc[len(df_by_wh.index)] = ['Total', df_by_wh['credits'].sum(), df_by_wh['dollars'].sum(), df_by_wh['cloud_services_dollars'].sum()]\n",
-    "\n",
+    "df_by_wh = df_by_wh.round(2)\n",
+    "df_by_wh.loc[len(df.index)] = ['Total', df_by_wh['credits'].sum(), df_by_wh['dollars'].sum(),  df_by_wh['cloud_services_credits'].sum(), df_by_wh['cloud_services_dollars'].sum()]\n",
     "print(tabulate(df_by_wh, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
@@ -375,7 +277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_wh = df_by_wh.drop(len(df_by_wh)-1) ## Remove the last row of totals for the plot\n",
+    "# Remove the last row of totals for the plot\n",
+    "df_by_wh.drop(df_by_wh.tail(1).index,inplace=True)\n",
     "\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=1,\n",
@@ -395,13 +298,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "- PROD_WH incurs the highest cost for warehouses amongst all with a dollar value of 1221.29, followed by DEV_WH with a dollar value of 797.61\n",
-    "- DAILY_REFRESH_WH’s cost is 347.14 and ML_WH’s cost is 140.47\n",
-    "- CLOUD_SERVICES_ONLY does not incur any costs.\n",
-    "\n"
+    "df_by_wh_ts = df.groupby(['warehouse_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
+    "df_by_wh_ts.head()"
    ]
   },
   {
@@ -410,22 +313,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_by_user_ts = df.groupby(['warehouse_name','start_time','end_time']).sum('numeric_only').reset_index()\n",
-    "fig = px.area(df_by_user_ts, x=\"start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
+    "##TODO: Investigate why tunring off cloud services only makes daily refresh plot jump in some points\n",
+    "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "- The credit usage increase on the 8th, 9th, and 10th of October from other days is because of more credit consumption by DEV_WH.\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('sf')",
+   "display_name": "Python 3.9.15 ('optiml')",
    "language": "python",
    "name": "python3"
   },
@@ -439,11 +342,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
