Partner tools graphs and query

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "df = qlib.total_cost_breakdown_ts(sdate, edate)\n",
-    "df = df.fillna('Unassigned')\n",
+    "df = df.fillna('UnassigSned')\n",
     "df.head()"
    ]
   },
@@ -339,7 +339,7 @@
     "# Returns results only for ACCOUNTADMIN role or any other role that has been granted MONITOR USAGE global privilege\n",
     "# So results consisten with Greg's usage\n",
     "df = qlib.cost_by_wh_ts(sdate, edate)\n",
-    "# df.head()"
+    "df.head()"
    ]
   },
   {
@@ -423,6 +423,75 @@
    "metadata": {},
    "source": [
     "## Cost by Partner Tools\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=qlib.cost_by_partner_tool_ts(start_date=\"2022-01-01\", end_date=\"2022-02-02\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_pt = df.groupby(['client_application_name']).sum('numeric_only').reset_index()\n",
+    "df_by_pt = df_by_pt.round(2)\n",
+    "df_by_pt.loc[len(df.index)] = ['Total', df_by_pt['approximate_credits_used'].sum()]\n",
+    "print(tabulate(df_by_pt, headers='keys', tablefmt='rounded_outline', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the last row of totals for the plot\n",
+    "df_by_pt.drop(df_by_pt.tail(1).index,inplace=True)\n",
+    "\n",
+    "fig = make_subplots(\n",
+    "    rows=1, cols=1,\n",
+    "    specs=[[{\"type\": \"pie\"}]],\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(go.Pie(labels=df_by_pt['client_application_name'].tolist(), values=df_by_pt['approximate_credits_used'].tolist(),name='credits',marker_colors=color_scheme),row=1,col=1)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Breakdown of total cost by partner tools\",\n",
+    "        'y':0.1,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'top'})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_by_pt_ts = df.groupby(['client_application_name','hourly_start_time']).sum('numeric_only').reset_index()\n",
+    "df_by_pt_ts.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "fig = px.area(df_by_pt_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme)\n",
+    "fig.show()"
    ]
   }
  ],
