Query Analysis markdown

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -493,6 +493,18 @@
     "fig = px.area(df_by_pt_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## QUERY ANALYSIS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
