--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -34,6 +34,8 @@
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
     "\n",
     "import pandas as pd\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -381,9 +383,15 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- There are 4 warehouses:\n",
+    "  - PROD_WH: <tag & describe>\n",
+    "  - DEV_WH: <tag & describe>\n",
+    "  - DAILY_REFRESH_WH: <tag & describe>\n",
+    "  - ML_WH: <tag & describe>\n",
     "- PROD_WH incurs the highest cost for warehouses amongst all with a dollar value of 1221.29, followed by DEV_WH with a dollar value of 797.61\n",
     "- DAILY_REFRESH_WH’s cost is 347.14 and ML_WH’s cost is 140.47\n",
     "- CLOUD_SERVICES_ONLY does not incur any costs.\n",
@@ -406,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO: Investigate why tunring off cloud services only makes daily refresh plot jump in some points\n",
+    "##TODO: Investigate why turning off cloud services only makes daily refresh plot jump in some points\n",
     "fig = px.area(df_by_wh_ts, x=\"hourly_start_time\", y=\"credits\", color=\"warehouse_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
@@ -493,11 +501,61 @@
     "fig = px.area(df_by_pt_ts, x=\"hourly_start_time\", y=\"approximate_credits_used\", color=\"client_application_name\",color_discrete_sequence=color_scheme)\n",
     "fig.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Peaks from Python usage at 10 am and 3 pm. Rest seems pretty noisy.\n",
+    "* JDBC driver takes most of the credits and is generally at 2 credits / hour all the time\n",
+    "* ODBC at 1/10th of that"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Warehouse configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.warehouse_config()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* There are no resource monitors on any of the warehouses - one action we can take is help them set these up properly based on the data we are seeing\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.2 ('sf')",
+   "display_name": "optiml",
    "language": "python",
    "name": "python3"
   },
@@ -511,11 +569,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.15 (main, Nov 24 2022, 08:28:41) \n[Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "ba286fab723f3beadf2310fa20d811dff5d5606e9e08a95b52f51185bcb3e19b"
+    "hash": "fcbd4ad66d969ea49516a1cf27383420b67e9e950ebdd1bbb64e01b736f968b6"
    }
   }
  },
